ConnexoProject/force-app/main/default/objects/Employee__c/fields/Annual_Package__c.field-meta.xml
<CustomField>
    <fullName>Annual_Package__c</fullName>
    <label>Annual Package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>