ConnexoProject/force-app/main/default/objects/Employee__c/fields/Employee_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Employee_Aadhar__c</fullName>
    <label>Employee Aadhar</label>
    <length>12</length>
    <type>Text</type>
</CustomField>