ConnexoProject/force-app/main/default/objects/Employee__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Employee Number</label>
    <type>AutoNumber</type>
</CustomField>