ConnexoProject/force-app/main/default/objects/Employee__c/fields/Ground_Experience__c.field-meta.xml
<CustomField>
    <fullName>Ground_Experience__c</fullName>
    <label>Ground Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>