ConnexoProject/force-app/main/default/objects/Employee__c/fields/Technical_Experience__c.field-meta.xml
<CustomField>
    <fullName>Technical_Experience__c</fullName>
    <label>Technical Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>