ConnexoProject/force-app/main/default/objects/Employee__c/recordTypes/Ground_Staff.recordType-meta.xml
<RecordType>
    <fullName>Ground_Staff</fullName>
    <active>true</active>
    <label>Ground Staff</label>
</RecordType>