ConnexoProject/force-app/main/default/objects/Employee__c/validationRules/Aadhar_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Employee_Aadhar__c),
  LEN(Employee_Aadhar__c) &lt;&gt; 12
)</errorConditionFormula>
    <errorDisplayField>Employee_Aadhar__c</errorDisplayField>
    <errorMessage>Please enter a valid 12-digit Aadhar number. This field is mandatory.</errorMessage>
</ValidationRule>