ConnexoProject/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Number__c</columns>
    <columns>Employee_Aadhar__c</columns>
    <columns>Pan_Card__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>